tests/src/frontend/visibility/invalid/mismatched_constructor.sk
base class X protected {f: Int}
class Y private {g: Int} extends X
